--- a/CSS/events.css
+++ b/CSS/events.css
@@ -120,3 +120,12 @@
     text-align: center;
     padding-bottom: 10vh;
 }
+
+body {
+    background-image: url(images/unicon01.jpg);
+    }
+    
+
+.title23 {
+    padding-top: 40vh;
+}
