--- a/CSS/activity.css
+++ b/CSS/activity.css
@@ -27,6 +27,10 @@
     padding-bottom: 40vh;
 }
 
+#year .rect2{
+    padding: 0 5vh;
+}
+
 #year .year-pic {
     width: 40vw;
 }
@@ -36,54 +40,63 @@
         padding: 0 10vw;
 }
 
-.year-wrapper {
-    text-align: center;
-}
-
-/* .box-right {
+.relative-right {
     position: relative;
-    width: 30vw;
-    margin-right: 0;
+    width: 35vw;
+    margin-top: -5vw;
     margin-left: auto;
-    margin-top: -5vh;
 }
 
-.center {
-    font-size: 32px;
-    font-family: "Gen Jyuu GothicX";
+.relative-left {
+    position: relative;
+    width: 35vw;
+    margin-top: -5vw;
+    margin-right: auto;
+}
+
+.relative-right img, .relative-left img {
+    width: 35vw;
+    border-radius: 30px;
+}
+
+.absolute {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    line-height: 100px;
+    width: 40vw;
     text-align: center;
-    width: 30vw;
-    background-color: rgba(255, 255, 255, 0.75);
-  }
+    font-size: 32px;
+    font-family: "Gen Jyuu GothicX";
+}
 
-  .top-left {
+.month {
     position: absolute;
-    top: -3vw;
-    left: -3vw;
-    display: inline-block;
-    width: 10vw;
-    font-size: 40px;
-    font-family:  "Gen Jyuu GothicX";
-    line-height: 10vw;
-    background-color: blue;
-    color: #fff;
+    top: -70px;
+    left: -30px;
+    line-height: 125px;
+    width: 125px;
     text-align: center;
     border-radius: 50%;
-  }
+    font-size: 40px;
+    font-family: "Gen Jyuu GothicX";
+    color: #fff;
+}
 
-  .box-left {
-    position: relative;
-    width: 30vw;
-    margin-left: 0;
-    margin-right: auto;
-    margin-top: -5vh;
-} */
+.pink {
+    background-color: #E43A86;
+}
+.yellow {
+    background-color: #F7CB6C;
+}
+.blue {
+    background-color: #89D0E8;
+}
 
-.right {
+
+/* .right {
     position: relative;
     width: 40vw;
     margin-right: 0;
@@ -99,7 +112,7 @@
     margin-right: auto;
     margin-top: -15vh;
     padding-right: 0;
-}
+} */
 
 .access {
     padding: 0 10vw;
@@ -148,9 +161,42 @@
         width: 35vw;
     }
 
-    /* 多分ココアとで100にする */
+    /* 多分ここあとで100にする */
     #year .year-pic {
         width: 500px;
+    }
+
+    .relative-right {
+        position: relative;
+        width: 80vw;
+        margin: 0 auto;
+        margin-top: 10vw;
+    }
+    
+    .relative-left {
+        position: relative;
+        width: 80vw;
+        margin: 0 auto;
+        margin-top: 10vw;
+    }
+    
+    .relative-right img, .relative-left img {
+        width: 80vw;
+    }
+    
+    .absolute {
+        line-height: 100px;
+        width: 80vw;
+        font-size: 24px;
+    }
+    
+    .month {
+        position: absolute;
+        top: -30px;
+        left: 0;
+        line-height: 80px;
+        width: 80px;
+        font-size: 24px;
     }
     
     .year, .access {
@@ -158,21 +204,6 @@
         margin: 0 5vw;
     }
 
-    .right {
-        width: 90vw;
-        margin-right: 0;
-        margin-left: 0;
-        margin-top: 30px;
-        padding-right: 0;
-    }
-    
-    .left {
-        width: 90vw;
-        margin-left: 0;
-        margin-right: 0;
-        margin-top: 30px;
-        padding-right: 0;
-    }
 
     .access {
         text-align: center;
@@ -202,5 +233,8 @@
         margin-top: 70px;
         margin-left: auto;
         margin-right: 5vw;
+    }
+    #year .rect2{
+        padding: 0;
     }
 }
